--- a/presentation-framework/package.json
+++ b/presentation-framework/package.json
@@ -14,9 +14,11 @@
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@upstash/redis": "^1.35.5",
     "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.8.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.3.0-canary-d7215b49-20251013",
     "react-dom": "^19.3.0-canary-d7215b49-20251013",
