Checkpoint: RSC improvements and background generator edge storage spec
- Added RSC layouts and custom components support
- Enhanced RSC bridge with improved serialization
- Added ChartHydrator component for dynamic chart rendering
- Updated presentation thumbnail and keyboard navigation
- Added slide scale hook for responsive presentations
- Updated background generator spec with edge storage architecture
- Added RSC animations and improved styling

--- a/presentation-framework/package.json
+++ b/presentation-framework/package.json
@@ -32,6 +32,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.3.0-canary-d7215b49-20251013",
     "react-dom": "^19.3.0-canary-d7215b49-20251013",
+    "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
