Fix resize logic and remove canvas bounds constraints
- Fix resize handles: use proper screenToCanvas coordinate conversion and store initial bounds to prevent cumulative errors
- Remove bounds constraints: allow elements to be dragged and resized outside the visible canvas area
- Fix image insertion: implement robust file picker with showOpenFilePicker API and fallback to hidden input
- Update image element types and rendering

--- a/presentation-framework/package.json
+++ b/presentation-framework/package.json
@@ -33,7 +33,8 @@
     "react": "^19.3.0-canary-d7215b49-20251013",
     "react-dom": "^19.3.0-canary-d7215b49-20251013",
     "recharts": "^3.3.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@edge-runtime/types": "^4.0.0",
