--- a/presentation-framework/package.json
+++ b/presentation-framework/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/next": "^8.0.7",
@@ -28,7 +29,7 @@
     "clsx": "^2.1.1",
     "ioredis": "^5.8.1",
     "jszip": "^3.10.1",
-    "next": "^15.0.3",
+    "next": "^16.0.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.3.0-canary-d7215b49-20251013",
     "react-dom": "^19.3.0-canary-d7215b49-20251013",
