--- a/presentation-framework/package.json
+++ b/presentation-framework/package.json
@@ -15,13 +15,17 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "lume:export": "node ./tools/lume/export.mjs",
-    "build:rsc": "webpack --config webpack.rsc.config.cjs"
+    "build:rsc": "webpack --config webpack.rsc.config.cjs",
+    "email:dev": "email dev --dir=src/emails"
   },
   "dependencies": {
+    "@auth/core": "^0.41.1",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
     "@types/next": "^8.0.7",
     "@upstash/redis": "^1.35.5",
     "@vercel/kv": "^3.0.0",
@@ -30,10 +34,12 @@
     "ioredis": "^5.8.1",
     "jszip": "^3.10.1",
     "next": "^16.0.1",
+    "next-auth": "^5.0.0-beta.30",
     "qrcode.react": "^4.2.0",
     "react": "^19.3.0-canary-d7215b49-20251013",
     "react-dom": "^19.3.0-canary-d7215b49-20251013",
     "recharts": "^3.3.0",
+    "resend": "^6.4.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
@@ -41,6 +47,7 @@
     "@edge-runtime/types": "^4.0.0",
     "@eslint/js": "^9.36.0",
     "@playwright/test": "^1.56.0",
+    "@react-email/preview-server": "^4.3.2",
     "@tailwindcss/postcss": "^4.1.14",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -58,6 +65,7 @@
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
     "postcss": "^8.5.6",
+    "react-email": "^4.3.2",
     "react-server-dom-webpack": "^19.3.0-canary-1873ad79-20251015",
     "tailwindcss": "^4.1.14",
     "tailwindcss-animate": "^1.0.7",
