--- a/presentation-framework/package.json
+++ b/presentation-framework/package.json
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "@auth/core": "^0.41.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.0.4",
     "@radix-ui/react-toggle": "^1.1.7",
