--- a/presentation-framework/package.json
+++ b/presentation-framework/package.json
@@ -38,6 +38,7 @@
     "@types/next": "^8.0.7",
     "@upstash/redis": "^1.35.5",
     "@vercel/kv": "^3.0.0",
+    "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ioredis": "^5.8.1",
