--- a/presentation-framework/package.json
+++ b/presentation-framework/package.json
@@ -41,6 +41,7 @@
     "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "ioredis": "^5.8.1",
     "jszip": "^3.10.1",
     "next": "^16.0.1",
